syntax = "proto3";

package addition_service;

service Architect {
  rpc Add (AddRequest) returns (AddResponse) {}
}

message AddRequest {
    int32 first = 1;
    int32 second = 2;
}

message AddResponse {
    int32 output = 1;
}
